--- a/assets/app/login/login.component.html
+++ b/assets/app/login/login.component.html
@@ -5,7 +5,7 @@
     </div>
     <form #f="ngForm">
         <div class="form-group">
-          <input type="text" name="username" class="form-control"
+          <input type="text" name="username" class="form-control" autocomplete="off"
           placeholder="username" ngModel required #username="ngModel"
           [class.is-invalid]="!username.valid && username.touched">
           <span class="invalid-feedback" *ngIf="!username.valid && username.touched">
@@ -13,7 +13,7 @@
           </span>
         </div>
         <div class="form-group">
-          <input type="password" name="password" class="form-control"
+          <input type="password" name="password" class="form-control" autocomplete="off"
           placeholder="password" ngModel required #password="ngModel"
           [class.is-invalid]="!password.valid && password.touched">
           <span class="invalid-feedback" *ngIf="!password.valid && password.touched">
