--- a/assets/app/order/order-edit/order-edit.component.html
+++ b/assets/app/order/order-edit/order-edit.component.html
@@ -1,7 +1,10 @@
 <h3>Edit Order</h3>
 <div class="form my-2">
   <div *ngIf="order" class="py-2">
-    <p class="{{types[order.type-1]}}"><span class="font-weight-bold">Code {{types[order.type-1]}}:</span> {{order.code}} <i class="fa fa-tag" *ngIf="!order.createdByServer"></i> {{order.void? '(เสีย)' : ''}}</p>
+    <div class="d-flex justify-content-between">
+      <p class="{{types[order.type-1]}}"><span class="font-weight-bold">Code {{types[order.type-1]}}:</span> {{order.code}} <i class="fa fa-tag" *ngIf="!order.createdByServer"></i> {{order.void? '(เสีย)' : ''}}</p>
+      <p data-toggle="modal" data-target="#exampleModal"><i *ngIf="canEdit" class="fa fa-ban"></i></p>
+    </div>
     <p *ngIf="order.claimedBy"><span class="font-weight-bold">ชื่อ-สกุล: </span><a routerLink="/students/{{order.claimedBy._id}}">{{order.claimedBy.firstname}} {{order.claimedBy.lastname}}</a></p>
     <p><span class="font-weight-bold">วันที่ (วัน-เดือน-ปี):</span> {{getDate(order.date)}}</p>
     <p><span class="font-weight-bold">รหัสคอร์ส:</span> {{order.courseCode}}</p>
@@ -60,11 +63,28 @@
     <div *ngIf="order.group">
       <hr>
       <!-- <p class="font-weight-bold">รายละเอียดการสมัคร</p> -->
-      <p><span class="font-weight-bold"> คอร์ส:</span> {{order.course.title}}</p>
-      <p><span class="font-weight-bold">หนังสือ:</span>
+      <p><span class="font-weight-bold" *ngIf="!!order.course">คอร์ส:</span> {{order.course? order.course.title: ''}}</p>
+      <p><span class="font-weight-bold" *ngIf="!!order.course">หนังสือ:</span>
         <li *ngFor="let book of order.books">{{book.title}}</li>
         <li *ngIf="order.books.length === 0">คอร์สนี้ไม่มีหนังสือ</li>
       </p>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h6 class="modal-title" id="exampleModalLabel">คุณแน่ใจว่าต้องการวอย สลิปใบนี้</h6>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+        <button type="button" class="btn btn-primary" (click)="onVoidOrder()">Yes</button>
+      </div>
     </div>
   </div>
 </div>
