--- a/assets/app/order/order-list/order-list.component.html
+++ b/assets/app/order/order-list/order-list.component.html
@@ -10,6 +10,9 @@
     <h6 class="font-weight-bold">รายชื่อสลิปอัพเดทล่าสุด (จาก {{count}} สลิป)</h6>
     <div>
       <div class="form-group d-flex">
+        <select (change)="getOrders()" class="form-control" [(ngModel)]="type">
+          <option *ngFor="let type of typeOptions; let i = index" value="{{i}}">{{type}}</option>
+        </select>
         <select (change)="getOrders()" class="form-control" [(ngModel)]="month">
           <option *ngFor="let number of [0,1,2,3,4,5,6,7,8,9,10,11]" value="{{number}}">{{months[number]}}</option>
         </select>
@@ -36,6 +39,7 @@
         <td>รหัสสลิป</td>
         <td>รหัสคอร์ส</td>
         <td>ราคาคอร์ส</td>
+        <td>วันที่โอน</td>
         <td>match กับระบบ</td>
         <td>เวลาอัพเดทล่าสุด</td>
       </tr>
@@ -46,6 +50,7 @@
       <td>{{order.code? order.code:'-'}}</td>
       <td>{{order.courseCode? order.courseCode: '-'}}</td>
       <td>{{order.price}}</td>
+      <td>{{updateDate(order.date)}}</td>
       <td>
         <i class="fa {{order.claimed? 'fa-check text-success':'fa-times text-danger'}}"></i>
       </td>
