--- a/assets/app/student/student-add/student-add.component.html
+++ b/assets/app/student/student-add/student-add.component.html
@@ -10,7 +10,7 @@
         </span> -->
       </div>
       <div class="form-group">
-        <input type="text" (input)="search(lastname.value)" name="lastname" class="form-control" autocomplete="off"
+        <input type="text" (input)="search(lastname.value)" name="lastname" class="form-control"
         placeholder="นามสกุล" ngModel required #lastname="ngModel"
         [class.is-invalid]="!lastname.valid && lastname.touched">
         <!-- <span class="invalid-feedback" *ngIf="!lastname.valid && lastname.touched">
