--- a/assets/app/student/student-show/student-show.component.html
+++ b/assets/app/student/student-show/student-show.component.html
@@ -62,7 +62,7 @@
           <div class="form-group" *ngIf="type && group != 0 && course != 0 && books.length >= 1 && getCourse(course)">
             <p>โปรดเลือกหนังสือ {{getCourse(course).numBook}} รายการ {{getCourse(course).strict? '':'หรือน้อยกว่า (ขึ้นกับคอร์สเรียนที่น้องสมัคร)'}}</p>
             <div *ngFor="let book of books">
-              <input (change)="onSelectBooks($event)" type="checkbox" value="{{book._id}}"
+              <input (change)="onSelectBooks($event)" type="checkbox" [checked]="check(book._id)" value="{{book._id}}"
               [disabled]="selectedBooks.length >= getCourse(course).numBook">
               {{book.title}}
             </div>
