--- a/assets/app/student/student-show/student-show.component.css
+++ b/assets/app/student/student-show/student-show.component.css
@@ -25,3 +25,16 @@
 .valid-feedback {
   display: block;
 }
+
+.fa-ban {
+  color: #ddd;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.fa-ban:hover {
+  color: #FC5C5F;
+  text-shadow: 0.5px 0.5px 0.5px red;
+  -webkit-transition: all 0.5s; /* Safari */
+   transition: all 0.5s;
+}
