--- a/assets/app/student/student-show/student-show.component.html
+++ b/assets/app/student/student-show/student-show.component.html
@@ -1,7 +1,30 @@
 <div *ngIf="student" class="py-2">
-  <p><span class="font-weight-bold">ชื่อ-สกุล: </span>{{student.firstname}} {{student.lastname}}
-    <i *ngIf="loading" class="fa fa-spin fa-spinner fa-fw pl-2"></i>
-  </p>
+  <div class="d-flex justify-content-between">
+    <p><span class="font-weight-bold">ชื่อ-สกุล: </span>{{student.firstname}} {{student.lastname}}
+      <i *ngIf="loading" class="fa fa-spin fa-spinner fa-fw pl-2"></i>
+    </p>
+    <div class="d-flex">
+      <p class="pl-2" data-toggle="modal" data-target="#exampleModal"><i *ngIf="student.orders.length == 0" class="fa fa-ban"></i></p>
+      <p class="text-primary pl-2" style="cursor:pointer" (click)="canEdit = !canEdit" *ngIf="authService.isAdmin()">{{canEdit? 'ซ่อน':'แก้'}}</p>
+    </div>
+  </div>
+
+  <div *ngIf="canEdit">
+    <h6 class="font-weight-bold">แก้ไขชื่อเด็ก</h6>
+      <div class="form-group">
+        <input type="text" name="firstname" class="form-control"
+        placeholder="ชื่อ" [(ngModel)]="ngStudent.firstname">
+      </div>
+
+      <div class="form-group">
+        <input type="text" name="lastname" class="form-control"
+        placeholder="สกุล" [(ngModel)]="ngStudent.lastname">
+      </div>
+
+      <div class="form-group text-right">
+          <button (click)="onEditStudent()" [disabled]="!ngStudent.firstname || !ngStudent.lastname" class="btn btn-primary">Edit</button>
+      </div>
+  </div>
 
   <div class="form my-2">
     <h6 class="font-weight-bold">เพิ่มรายการโอน</h6>
@@ -105,6 +128,29 @@
         <p><span class="font-weight-bold">รหัสคอร์ส:</span> {{order.courseCode}}</p>
         <p><span class="font-weight-bold">ราคา:</span> {{order.price}} บาท</p>
         <p><span class="font-weight-bold">เคลม: <i class="fa {{order.claimed? 'fa-check text-success':'fa-times text-danger'}}"></i></span>
+        <hr>
+        <p><span class="font-weight-bold">คอร์ส: </span> {{order.course.title}}</p>
+        <p>
+          <span class="font-weight-bold">หนังสือที่ออก:</span>
+          <li *ngFor="let book of order.books">{{book.title}}</li>
+        </p>
       </div>
     </div>
+</div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h6 class="modal-title" id="exampleModalLabel">คุณแน่ใจว่าต้องการลบเด็กคนนี้</h6>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+        <button type="button" class="btn btn-primary" (click)="onDeleteStudent()">Yes</button>
+      </div>
+    </div>
+  </div>
 </div>
