--- a/assets/app/order/order-list/order-list.component.css
+++ b/assets/app/order/order-list/order-list.component.css
@@ -32,3 +32,13 @@
 .FREE {
   color: #93E137;
 }
+
+.claimed {
+  cursor: pointer;
+}
+
+.claimed:hover {
+  text-shadow: 0.5px 0.5px 0.5px black;
+  -webkit-transition: all 0.5s; /* Safari */
+   transition: all 0.5s;
+}
