--- a/assets/app/order/order-list/order-list.component.html
+++ b/assets/app/order/order-list/order-list.component.html
@@ -45,16 +45,16 @@
         <td>เวลาอัพเดทล่าสุด</td>
       </tr>
     </thead>
-    <tr style="cursor:pointer" routerLink="/orders/{{order._id}}/edit" *ngFor="let order of orders; let i = index">
+    <tr *ngFor="let order of orders; let i = index">
       <td class="font-weight-bold">{{i + 1}}</td>
       <td class="font-weight-bold {{types[order.type-1]}}">{{types[order.type-1]}}</td>
-      <td>{{order.code? order.code:'-'}}</td>
+      <td><a style="text-decoration: none" routerLink="/orders/{{order._id}}/edit">{{order.code? order.code:'-'}}</a></td>
       <td>{{order.courseCode? order.courseCode: '-'}}</td>
       <td>{{order.price}}</td>
       <td>{{updateDate(order.date)}}</td>
       <td>{{branchArray[order.branch]}}</td>
       <td>
-        <i class="fa {{order.claimed? 'fa-check text-success':'fa-times text-danger'}}"></i>
+        <i [hidden]="loading" (click)="claim(order.type, order._id, order.createdByServer)" class="fa {{order.claimed? 'fa-check text-success':'fa-times text-danger'}} {{order.type == 4 && !order.createdByServer? 'claimed': ''}}"></i>
       </td>
       <td>
         {{order.claimed? getDate(order.claimedAt): getDate(order.updatedAt)}}
