--- a/assets/app/student/student-list/student-list.component.html
+++ b/assets/app/student/student-list/student-list.component.html
@@ -5,12 +5,16 @@
   <i style="cursor:pointer" (click)="search = !search" class="fa fa-search fa-2x"></i>
 </div>
 <student-search *ngIf="search"></student-search>
-<div class="container my-4" *ngIf="students.length !== 0">
-  <div class="d-flex justify-content-between">
-    <h6 class="font-weight-bold">รายชื่อเด็กอัพเดทล่าสุด (จาก {{count}} คน ในฐานข้อมูล)</h6>
-    <div>
-      <label><i class="fa fa-bolt CS"></i> = เด็กใหม่ | </label>
-      <select (change)="selectFilter($event)" id="">
+<div class="d-flex justify-content-between my-4">
+  <h6 class="font-weight-bold">รายชื่อเด็กอัพเดทล่าสุด {{students.length}} คน (จาก {{count}} คน ในฐานข้อมูล)</h6>
+  <div>
+    <div class="form-group d-flex">
+      <!-- <label><i class="fa fa-bolt CS"></i> = เด็กใหม่ | </label> -->
+      <select *ngIf="authService.isAdmin()" (change)="getStudents()" class="form-control" [(ngModel)]="branch">
+        <option value="0">ทุกสาขา</option>
+        <option *ngFor="let number of [1,2,3,4,5,6,7,8,9,10,11,12,13,14]" value="{{number}}">{{branchArray[number]}}</option>
+      </select>
+      <select class="form-control" (change)="selectFilter($event)" id="">
         <option value="">เลือกจำนวนผลลัพธ์</option>
         <option value="500">500</option>
         <option value="1000">1000</option>
@@ -18,6 +22,8 @@
       </select>
     </div>
   </div>
+</div>
+<div class="container" *ngIf="students.length !== 0">
   <table class="table my-2 text-center">
     <thead class="thead">
       <tr>
