--- a/assets/app/student/student-list/student-list.component.html
+++ b/assets/app/student/student-list/student-list.component.html
@@ -2,6 +2,7 @@
   <h4>Student Page
     <i *ngIf="loading" class="fa fa-spin fa-spinner fa-fw pl-2"></i>
   </h4>
+  <!-- <p (click)="onUpdateStudent()">update</p> -->
   <i style="cursor:pointer" (click)="search = !search" class="fa fa-search fa-2x"></i>
 </div>
 <student-search *ngIf="search"></student-search>
