--- a/assets/app/book/book-show/book-show.component.html
+++ b/assets/app/book/book-show/book-show.component.html
@@ -42,7 +42,7 @@
           <i class="fa {{order.claimed? 'fa-check text-success':'fa-times text-danger'}}"></i>
         </td>
         <td>{{branchArray[order.branch]}}</td>
-        <td>{{getDate(order.updatedAt)}}</td>
+        <td>{{getDate(order.claimedAt)}}</td>
       </tr>
     </table>
   </div>
