--- a/assets/app/order/order-edit/order-edit.component.css
+++ b/assets/app/order/order-edit/order-edit.component.css
@@ -33,6 +33,10 @@
   color: #93E137;
 }
 
+.REFUND {
+  color: #4688F1;
+}
+
 a {
   text-decoration: none;
 }
@@ -58,4 +62,9 @@ a {
   text-shadow: 0.5px 0.5px 0.5px black;
   -webkit-transition: all 0.5s; /* Safari */
    transition: all 0.5s;
+}
+
+
+.cursor {
+  cursor: pointer;
 }
